[package]
name = "modbus-mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
bytes = "1.1.0"
clap = { version = "3.2.12", features = ["derive", "env"] }
futures-util = "0.3.23"
humantime-serde = "1.1.1"
itertools = "0.10.3"
reqwest = { version = "0.11.11", features = ["rustls-tls-native-roots", "json"], default-features = false }
rumqttc = "0.15.0"
rust_decimal = { version = "1.26.1", features = ["serde-arbitrary-precision", "serde-float", "serde_json", "maths"] }
serde = { version = "1.0.139", features = ["serde_derive"] }
serde_json = "1.0.82"
serialport = { version = "4.2.0", features = ["serde"] }
tokio = { version = "1.20.0", features = ["rt", "rt-multi-thread", "time"] }
tokio-modbus = "0.5.3"
tokio-serial = "5.4.3"
tokio-tungstenite = { version = "0.17.2", features = ["rustls-tls-native-roots"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
uuid = { version = "1.1.2", features = ["v4", "serde"] }

[dev-dependencies]
pretty_assertions = "1.2.1"
