[workspace]
resolver = "2"
members = [
  "modbus-mqtt",
  "sungrow-winets",
  "tokio_modbus-winets",
]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "aarch64-unknown-linux-gnu",
  "aarch64-unknown-linux-musl",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-unknown-linux-musl",
  "x86_64-pc-windows-msvc",
]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
publish-jobs = ["./release-docker"]
# Whether to install an updater program
install-updater = false
# Whether CI should trigger releases with dispatches instead of tag pushes
dispatch-releases = true
# A GitHub repo to push Homebrew formulas to
tap = "bjeanes/homebrew-tap"
# Publish jobs to run in CI
pr-run-mode = "plan"

[workspace.metadata.dist.github-custom-runners]
aarch64-apple-darwin = "macos-14"
x86_64-apple-darwin = "macos-14"

# The profile that 'cargo dist' will build withgithub-attestations = true
[profile.dist]
inherits = "release"
lto = "thin"
