[package]
name = "modbus-mqtt"
version = "0.3.0"
edition = "2021"
authors = ["Bo Jeanes <me@bjeanes.com>"]
description = "A bridge between Modbus devices and MQTT"
keywords = ["modbus", "mqtt", "sungrow"]
categories = ["network-programming", "command-line-utilities"]
homepage = "https://github.com/bjeanes/modbus-mqtt/tree/main/modbus-mqtt"
repository = "https://github.com/bjeanes/modbus-mqtt"
license = "MIT"

[dependencies]
bytes = "1.1.0"
clap = { version = "4.0.32", features = ["derive", "env"] }
humantime-serde = "1.1.1"
itertools = "0.13.0"
rand = "0.8.5"
rumqttc = { version = "0.24.0", default-features = false, features = ["url"] }
rust_decimal = { version = "1.26.1", features = ["serde-arbitrary-precision", "serde-float", "serde_json", "maths"] }
serde = { version = "1.0.139", features = ["serde_derive"] }
serde_json = { version = "1.0.82", features = ["raw_value"] }
thiserror = "1.0.33"
tokio = { version = "1.20.0", features = ["rt", "rt-multi-thread", "time", "signal"] }
tokio-modbus = { version = "0.7.1", default-features = false }
tokio-serial = { version = "5.4.3", optional = true }
tokio_modbus-winets = { version = "0.2.1", path = "../tokio_modbus-winets", optional = true, default-features = false }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
url = { version = "2.2.2", features = ["serde"] }

[dependencies.serialport]
version = "4.2.0"
optional = true
default-features = false # disable libudev, to simplify cross-compilation
features = ["serde"]

[dev-dependencies]
pretty_assertions = "1.2.1"

[features]
default = ["tcp", "rtu", "winet-s"]
tcp = ["tokio-modbus/tcp"]
rtu = ["tokio-modbus/rtu", "dep:tokio-serial", "dep:serialport"]
winet-s = ["dep:tokio_modbus-winets"]
ws = ["rumqttc/websocket"]
tls = ["rustls"]
rustls = ["rumqttc/use-rustls"]

[package.metadata.dist]
features = ["default", "ws", "tls"]
