[package]
name = "sungrow-winets"
version = "0.1.0"
edition = "2021"
authors = ["Bo Jeanes <me@bjeanes.com>"]
description = "A rudimentary client for programmatically interacting with Sungrow inverters which are using a WiNet-S dongle for network connectivity."
keywords = ["sungrow"]
categories = ["api-bindings"]
homepage = "https://github.com/bjeanes/modbus-mqtt/tree/main/sungrow-winets"
repository = "https://github.com/bjeanes/modbus-mqtt"
license = "MIT"

[dependencies]
bitmask-enum = "2.0.0"
futures-util = "0.3.23"
if_chain = "1.0.2"
reqwest = { version = "0.11.11", features = ["json"], default-features = false }
serde = { version = "1.0.139", features = ["serde_derive"] }
serde-aux = "3.1.0"
serde_json = "1.0.82"
thiserror = "1.0.32"
tokio = { version = "1.20.0", features = ["time"] }
tokio-tungstenite = { version = "0.17.2" }
tracing = "0.1.36"
tungstenite = "0.17.3"

[dev-dependencies]
tracing-subscriber = "0.3.15"

[[example]]
name = "poll"
required-features = ["tokio/rt", "tokio/macros"]

[[example]]
name = "set_forced_power"
required-features = ["tokio/rt", "tokio/macros"]
