[package]
name = "sungrow-winets"
version = "0.2.0"
edition = "2021"
authors = ["Bo Jeanes <me@bjeanes.com>"]
description = "A rudimentary client for programmatically interacting with Sungrow inverters which are using a WiNet-S dongle for network connectivity."
keywords = ["sungrow"]
categories = ["api-bindings"]
homepage = "https://github.com/bjeanes/modbus-mqtt/tree/main/sungrow-winets"
repository = "https://github.com/bjeanes/modbus-mqtt"
license = "MIT"

[dependencies]
bitmask-enum = "2.0.0"
futures-util = "0.3.23"
reqwest = { version = "0.12.5", features = ["json"], default-features = false }
serde = { version = "1.0.139", features = ["serde_derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.82"
thiserror = "1.0.32"
tokio = { version = "1.20.0", features = ["time"] }
tokio-tungstenite = { version = "0.23.1" }
tracing = "0.1.36"
tungstenite = "0.23.0"

[dev-dependencies]
tracing-subscriber = "0.3.15"

[[example]]
name = "poll"
required-features = ["tokio/rt-multi-thread", "tokio/macros"]

[[example]]
name = "set_forced_power"
required-features = ["tokio/rt-multi-thread", "tokio/macros"]
