[package]
name = "tokio_modbus-winets"
version = "0.2.0"
edition = "2021"
authors = ["Bo Jeanes <me@bjeanes.com>"]
license = "MIT"
keywords = ["tokio_modbus", "modbus", "sungrow"]
description = "Teaches tokio_modbus to query Modbus registers over HTTP for Sungrow inverters using WiNet-S network dongle."
homepage = "https://github.com/bjeanes/modbus-mqtt/tree/main/tokio_modbus-winets"
repository = "https://github.com/bjeanes/modbus-mqtt"

[dependencies]
async-trait = "0.1.57"
sungrow-winets = { version = "0.2.0", path = "../sungrow-winets" }
tokio-modbus = { version = "0.5.3", default-features = false }
tracing = "0.1.36"
